# RuBLE

./: .envrc  .gdbinit  .gitignore  .gitmodules  .rubocop.yml  .ruby-version  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  Rakefile  RubBLE.gemspec  SimpleRbBLE.gemspec  Steepfile  rbs_collection.lock.yaml  rubble.gemspec  ruble.gemspec
.github/workflows/: gem-push.yml.disabled  msbuild.yml.disabled
.run/: Rake dev.run.xml  audit_objfile_symbols.run.xml  boost_version_tester.run.xml
contrib/: NamedBitSet.cpp  build_simpleble.sh  gdb-cpp-frame-filters.py
contrib/unused/: checksums.rb
ext/SimpleRbBLE/: .gitignore  Adapter.cpp  Adapter.h  Adapter.hpp  AdapterProxy.cpp  AdapterProxy.h  AdapterProxyRegistry.cpp  AdapterProxyRegistry.h  ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  Callback.cpp  Callback.h  Callback.hpp  CallbackHolder.cpp  CallbackHolder.h  Characteristic.cpp  Characteristic.h  Characteristic.hpp  ConvertableByteArray.cpp  ConvertableByteArray.h  ConvertableByteArray.hpp  DebugUtils.cpp  DebugUtils.hpp  Descriptor.cpp  Descriptor.h  Descriptor.hpp  LambdaProps.hpp  NamedBitSet.cpp  NamedBitSet.h  NamedBitSet.hpp  Peripheral.cpp  Peripheral.h  Peripheral.hpp  Registry.cpp  Registry.h  Registry.hpp  RegistryFactory.cpp  RegistryFactory.h  RegistryFactory.hpp  (+26 more)
ext/SimpleRbBLE/bindings/: Adapter.cpp  Adapter.hpp  Characteristic.cpp  Characteristic.hpp  Descriptor.cpp  Descriptor.hpp  Peripheral.cpp  Peripheral.hpp  Service.cpp  Service.hpp  SimpleRbBLE.cpp  common.hpp  globals.cpp
ext/SimpleRbBLE/concerns/: CharacteristicValueTracker.cpp  CharacteristicValueTracker.hpp  Rubyable.cpp  Rubyable.hpp
ext/SimpleRbBLE/containers/: ByteArray.cpp  ByteArray.hpp  Callback.hpp  NamedBitSet.hpp  NamedBitSet.ipp
ext/SimpleRbBLE/helpers/: Callback.hpp  InRuby.hpp  NamedBitSet.hpp  NamedBitSet.ipp  RegistryFactory.hpp  ResourceIdentifiers.ipp  ResourceUniqueIdentifier.hpp  ResourceUniqueIdentifier.ipp  exceptions.hpp  identifiers.hpp  metaprogramming.hpp
ext/SimpleRbBLE/includes/: boost_stacktrace.rb
ext/SimpleRbBLE/management/: Registry.cpp  Registry.hpp  RegistryFactory.hpp  RubyQueue.cpp  RubyQueue.hpp
ext/SimpleRbBLE/types/: SimpleBLE.hpp  chrono.hpp  declarations.hpp  helpers.hpp  ranges.hpp  ruby.hpp  spans.hpp  stl.hpp
ext/SimpleRbBLE/utils/: CallableTraits.cpp  CallableTraits.hpp  RubyCallbackTraits.cpp  RubyCallbackTraits.hpp  async.cpp  async.hpp  containers.hpp  endianness.hpp  exception_handling.cpp  exception_handling.hpp  garbage_collection.cpp  garbage_collection.hpp  hash.cpp  hash.hpp  hexadecimal.cpp  hexadecimal.hpp  human_type_names.hpp  inspection.cpp  inspection.hpp  ruby.cpp  ruby.hpp  ruby_context.hpp
ext/rubble/: .gitignore  CMakeLists.txt  RubBLEHelpers.cmake  RubbleHelpers.cmake  cmake.mk  config.h.in  extconf.rb
ext/rubble/bindings/: Adapter.cpp  Adapter.hpp  Characteristic.cpp  Characteristic.hpp  Descriptor.cpp  Descriptor.hpp  Peripheral.cpp  Peripheral.hpp  RubBLE.cpp  Service.cpp  Service.hpp  common.hpp  globals.cpp
ext/rubble/concerns/: CharacteristicValueTracker.cpp  CharacteristicValueTracker.hpp  Rubyable.cpp  Rubyable.hpp
ext/rubble/containers/: ByteArray.cpp  ByteArray.hpp  Callback.hpp  NamedBitSet.hpp  NamedBitSet.ipp
ext/rubble/management/: Registry.cpp  Registry.hpp  RegistryFactory.hpp  RubyQueue.cpp  RubyQueue.hpp
ext/rubble/types/: SimpleBLE.hpp  declarations.hpp  helpers.hpp  ruby.hpp  stl.hpp
ext/rubble/utils/: RubyCallbackTraits.cpp  RubyCallbackTraits.hpp  async.cpp  async.hpp  containers.hpp  endianness.hpp  exception_handling.cpp  exception_handling.hpp  garbage_collection.cpp  garbage_collection.hpp  hash.cpp  hash.hpp  hexadecimal.cpp  hexadecimal.hpp  human_type_names.hpp  inspection.cpp  inspection.hpp  ruby.hpp  ruby_context.hpp
ext/ruble/: .gitignore  CMakeLists.txt  RuBLEHelpers.cmake  cmake.mk  config.h.in  dependencies.yml  extconf.rb  modularize.diff
ext/ruble/bindings/: Adapter.cpp  Adapter.hpp  Characteristic.cpp  Characteristic.hpp  Descriptor.cpp  Descriptor.hpp  Peripheral.cpp  Peripheral.hpp  RuBLE.cpp  Service.cpp  Service.hpp  common.hpp  globals.cpp
ext/ruble/cmake/: boost.cmake  boost_stacktrace.cmake  debug.cmake  helpers.cmake  ruby.cmake  simpleble.cmake
ext/ruble/concerns/: CharacteristicValueTracker.cpp  CharacteristicValueTracker.hpp  Rubyable.cpp  Rubyable.hpp
ext/ruble/containers/: ByteArray.cpp  ByteArray.hpp  Callback.hpp  NamedBitSet.hpp  NamedBitSet.ipp
ext/ruble/include/: dbgeng.h
ext/ruble/include/boost/stacktrace/detail/: frame_msvc.ipp
ext/ruble/management/: Registry.cpp  Registry.hpp  RegistryFactory.hpp  RubyQueue.cpp  RubyQueue.hpp
ext/ruble/types/: SimpleBLE.hpp  declarations.hpp  helpers.hpp  ruby.hpp  stl.hpp
ext/ruble/utils/: RubyCallbackTraits.cpp  RubyCallbackTraits.hpp  async.cpp  async.hpp  containers.hpp  exception_handling.cpp  exception_handling.hpp  garbage_collection.cpp  garbage_collection.hpp  hash.cpp  hash.hpp  hexadecimal.hpp  human_type_names.hpp  inspection.cpp  inspection.hpp  ruby.hpp  ruby_context.hpp
lib/: RuBLE.rb  RubBLE.rb  SimpleRbBLE.rb  rubble.rb  ruble.rb
lib/SimpleRbBLE/: adapter.rb  build.rb  callback_concern.rb  callback_holder.rb  callback_holder.rb.old  version.rb
lib/rubble/: build.rb  version.rb
lib/ruble/: build.rb  version.rb
lib/tasks/: dev.rake  simpleble.rake
lib/tasks/dev/: dev_tasks.rb  pager.rb  paths.rb  state_hash.rb
lib/tasks/lib/: dev_tasks.rb  paths.rb  simpleble.rb
sig/: SimpleRbBLE.rbs  rubble.rbs
test/: .gitignore  byte_array.rb  cmake.rb  debug-wrap.cpp  debug.rb  debug2.rb  endianess.cpp  lambda_props.rb  tracepoint_manager.rb
